--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "packagepackage"
-description = "[TEST] of a package developed with pipenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
+description = "Python package that allows the user to play four different academic games which aim to improve the player's abilities in four different subjects. Developed with pipenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
 version = "0.1.3"
 authors = [
   { name="Tim Xu", email="tzx201@nyu.edu" },
+  { name="Anna Ye", email="azy2006@nyu.edu" },
+  { name="Jack Wang", email="jjw9077@nyu.edu" },
+  { name="Joylyn Gong", email="jxg2306@nyu.edu" }
 ]
 license = { file = "LICENSE" }
 readme = "README.md"
